Jan 24, 2011 - chris ---------------------------------------------------
o several smaller fixes based on static code analysis

Jan 10, 2011 - chris ---------------------------------------------------
o removed two wrong asserts and improved the fix of Nov 25th

Dec 05, 2010 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.8

Dec 03, 2010 - chris ---------------------------------------------------
o configure.in will no longer overwrite -Ox flags; the default 
    compilation option is now -O2 (thanks, Mark)

Nov 30, 2010 - chris ---------------------------------------------------
o bugfix with HAM_DIRECT_ACCESS and cursors which insert duplicates at the
    beginning of the duplicate list; if record size is <= 8 bytes then
    invalid data was returned

Nov 25, 2010 - chris ---------------------------------------------------
o bugfix in transaction handling - in certain cases with long running 
    transactions, a circular reference in a linked list causes an endless
    loop (thanks, Mark)

Oct 31, 2010 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.7

Oct 22, 2010 - chris ---------------------------------------------------
o further enhanced performance by improving some cache interfaces

Oct 20, 2010 - chris ---------------------------------------------------
o enhanced performance when appending (or prepending) keys; hamsterdb 
    will automatically assume HAM_HINT_APPEND (or HAM_HINT_PREPEND) if the 
    previous operation was also an append (or prepend)

Oct 16, 2010 - chris ---------------------------------------------------
o fixed a small memory leak when committing remote transactions
o bugfix: using HAM_DIRECT_ACCESS with records of a length <= 8 bytes
    returned pointers to temporary copies of the record and not to the
    original data (thanks, Lionel)

Oct 14, 2010 - chris ---------------------------------------------------