@@ -10,7 +10,7 @@ x a finished TODO item
 
 x add lessfs-fixes from Mark
 
-o build fails on 64bit - see patch in bleeding_edge branch
+x build fails on 64bit - see patch in bleeding_edge branch
 
 o when having a txn running for a very long time, the system can
     run out of mmap memory
