@@ -1,3 +1,7 @@
+Jan 25, 2011 - chris ---------------------------------------------------
+o merged bugfix from branch bleeding_edge: on 64bit windows, the remote
+    handles returned by the server were broken
+
 Jan 24, 2011 - chris ---------------------------------------------------
 o several smaller fixes based on static code analysis
 
